# xar

./: CMakeLists.txt  README.md
include/: xar.h
include/recognition/: feature.h
include/util/: draw.h  transform.h
src/: xar.cxx
src/recognition/: feature.cxx
